computer-vision/images/model-ex

--- a/model-ex/MANIFEST.yaml
+++ b/model-ex/MANIFEST.yaml
@@ -1,3 +1,5 @@
+zdj7WYTggPuNRMqHchaRJq7uZSDnBtWYFbigB4FasTVW8LKCM: !!set
+  c.png: null
 zdj7WZD17RSKNd1L2gyFwBtTtmYi7bJNRASaToNg9tLRj5npm: !!set
   a.png: null
 zdj7WbhNR2bB6Abx5tXMmAPQJnmFqTjQKxUNXaGasAV9yxR1t: !!set
@@ -8,3 +10,5 @@ zdj7WdhheBofk6uuQ7qxxY7NVERfqrf13VTLuHbP4gy6m7ye5: !!set
   Boleto_Acordo (1).pdf: null
 zdj7WfCNgn8SUCezaLhwmtpoCy43aBdUg7UNaV2T4w8k56sZc: !!set
   Boleto_Acordo.pdf: null
+zdj7WnebrZvcHJ5NQVWsymmZFsXfvkcw5cJ2QXNEy67xGWxQm: !!set
+  Captura de tela de 2020-10-14 11-39-31.png: null
