computer-vision/images/model-ex

--- a/model-ex/MANIFEST.yaml
+++ b/model-ex/MANIFEST.yaml
@@ -1,3 +1,5 @@
+zdj7WXW7Gva7JhgsLJz4whhk5aVm8G1WyvBJMvDR3RCDJQDtB: !!set
+  Captura de tela de 2020-12-14 14-40-28.png: null
 zdj7WYTggPuNRMqHchaRJq7uZSDnBtWYFbigB4FasTVW8LKCM: !!set
   c.png: null
 zdj7WZD17RSKNd1L2gyFwBtTtmYi7bJNRASaToNg9tLRj5npm: !!set
@@ -10,5 +12,7 @@ zdj7WdhheBofk6uuQ7qxxY7NVERfqrf13VTLuHbP4gy6m7ye5: !!set
   Boleto_Acordo (1).pdf: null
 zdj7WfCNgn8SUCezaLhwmtpoCy43aBdUg7UNaV2T4w8k56sZc: !!set
   Boleto_Acordo.pdf: null
+zdj7WjrJRHR2aNHPCC7pomcAmEGZqqQxc5QeMzuP3Y8bDeX4M: !!set
+  part-00000-85205b67-5bf3-4b90-9ceb-484a60419767-c000.snappy.parquet: null
 zdj7WnebrZvcHJ5NQVWsymmZFsXfvkcw5cJ2QXNEy67xGWxQm: !!set
   Captura de tela de 2020-10-14 11-39-31.png: null
