--- a/models-ex/MANIFEST.yaml
+++ b/models-ex/MANIFEST.yaml
@@ -8,3 +8,5 @@ zdj7WdhheBofk6uuQ7qxxY7NVERfqrf13VTLuHbP4gy6m7ye5: !!set
   Boleto_Acordo (1).pdf: null
 zdj7WfCNgn8SUCezaLhwmtpoCy43aBdUg7UNaV2T4w8k56sZc: !!set
   Boleto_Acordo.pdf: null
+zdj7WmSrCFkjA2jg11irzmUu7wb55EZP3vaMXFf2e5aCXAWET: !!set
+  Captura de tela de 2021-05-04 11-13-44.png: null
